--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -121,3 +121,143 @@ footer {
   }
 
 }
+
+/* Must Reads */
+
+#must-reads {
+  position: relative;
+  color: #ffffff;
+}
+
+#must-reads::after {
+  content: "Must Reads";
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 70px;
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: -0.3px;
+  line-height: 34px;
+  text-align: center;
+}
+
+.carousel-image {
+  height: 379px;
+  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
+  background-size: cover;
+}
+
+.carousel-image::after {
+  content: "";
+  display: block;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption > .heading {
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 50px;
+}
+
+.carousel-caption > button {
+  padding: 10px 25px;
+  line-height: 16px;
+  border: solid 2.2px #ffffff;
+  border-radius: 90px;
+  background-color: transparent;
+  font-size: 15.8px;
+  font-weight: bold;
+  letter-spacing: 2.2px;
+  text-transform: uppercase;
+}
+
+.carousel-control {
+  width: 45px;
+  top: 46%;
+  bottom: auto;
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.carousel-control > img {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+
+  #must-reads::after {
+    top: 32px;
+    font-size: 22px;
+    letter-spacing: -0.2px;
+    line-height: 27px;
+  }
+
+  .carousel-image {
+    height: 248px;
+  }
+
+  .carousel-caption {
+    right: 15%;
+    left: 15%;
+    padding-bottom: 10px;
+  }
+
+  .carousel-caption > .heading {
+    font-size: 24px;
+    line-height: 33px;
+    margin-bottom: 34px;
+  }
+
+  .carousel-caption > button {
+    border-width: 1.6px;
+    border-radius: 65.5px;
+    padding: 9px 20px;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1.6px;
+  }
+
+}
+
+@media (min-width: 1024px) {
+
+  #must-reads::after {
+    top: 38px;
+    font-size: 34px;
+    letter-spacing: -0.3px;
+    line-height: 41px;
+  }
+
+  .carousel-image {
+    height: 379px;
+  }
+
+  .carousel-caption {
+    padding-bottom: 20px;
+  }
+
+  .carousel-caption > .heading {
+    font-size: 38px;
+    line-height: 50px;
+    margin-bottom: 55px;
+  }
+
+  .carousel-caption > button {
+    border-width: 2.4px;
+    border-radius: 100px;
+    padding: 14px 35px;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 2px;
+  }
+
+  .carousel-control {
+    width: 70px;
+    top: 43%;
+  }
+
+}
