--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -26,6 +26,7 @@ body {
   border-bottom-width: 4px;
   border-bottom-style: solid;
   margin-bottom: 15px;
+  color: #000000;
 }
 
 .read-more {
@@ -124,6 +125,176 @@ header {
   .header-title {
     font-size: 32px;
     margin-left: 25px;
+  }
+
+}
+
+/* Lead Section */
+
+#lead-section {
+  background-color: #ffffff;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+#lead-section .image {
+  float: left;
+  width: 100%;
+  height: 243px;
+  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
+  background-size: cover;
+}
+
+#lead-section .story-details {
+  float: left;
+  width: 100%;
+  padding: 16px 15px 25px;
+}
+
+#lead-section .story-section {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 19px;
+  letter-spacing: 1.5px;
+  padding-bottom: 2px;
+  border-bottom: solid 3px #edd30d;
+  margin-bottom: 3px;
+}
+
+#lead-section .story-details .title {
+  margin-bottom: 20px;
+  font-size: 26px;
+  line-height: 1.31;
+  color: #222222;
+}
+
+#lead-section .story-details .info {
+  font-size: 12px;
+  line-height: 1.53;
+  color: #5c5c5c;
+  margin-bottom: 29px;
+}
+
+#lead-section .story-details .author-image {
+  float: left;
+  width: 54px;
+  height: 54px;
+  margin-right: 16px;
+  background-color: #9b9b9b;
+}
+
+#lead-section .story-details .author {
+  font-size: 16px;
+  line-height: 19px;
+  color: #818181;
+}
+
+#lead-section .story-details .posted {
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  color: #3d3d3d;
+}
+
+@media (min-width: 768px) {
+
+  #lead-section .image {
+    width: 50%;
+    height: 295px;
+  }
+
+  #lead-section .story-details {
+    width: 50%;
+    padding: 26px 20px;
+  }
+
+  #lead-section .story-section {
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 1.1px;
+    padding-bottom: 2.5px;
+    margin-bottom: 3.5px;
+  }
+
+  #lead-section .story-details .title {
+    font-size: 22px;
+    margin-bottom: 14px;
+  }
+
+  #lead-section .story-details .author-image {
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+  }
+
+  #lead-section .story-details .author {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  #lead-section .story-details .posted {
+    margin-top: 3px;
+    font-size: 10px;
+    line-height: 12px;
+  }
+
+}
+
+@media (min-width: 992px) {
+
+  #lead-section .image {
+    height: 444px;
+  }
+
+  #lead-section .story-details {
+    padding: 33px 30px 41px;
+  }
+
+  #lead-section .story-section {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 1.6px;
+    padding-bottom: 3px;
+    margin-bottom: 14px;
+  }
+
+  #lead-section .story-details .title {
+    margin-bottom: 19px;
+    font-size: 34px;
+    line-height: 1.24;
+  }
+
+  #lead-section .story-details .info {
+    font-size: 18px;
+    line-height: 1.56;
+    margin-bottom: 45px;
+  }
+
+  #lead-section .story-details .author-image {
+    width: 54px;
+    height: 54px;
+    margin-right: 16px;
+  }
+
+  #lead-section .story-details .author {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  #lead-section .story-details .posted {
+    margin-top: 7px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+}
+
+@media (min-width: 1172px) {
+
+  #lead-section {
+    margin-top: 40px;
   }
 
 }
