--- a/public/css/landing-page.css
+++ b/public/css/landing-page.css
@@ -37,6 +37,26 @@ body {
   color: #000000;
 }
 
+.travel {
+  border-bottom-color: #60bcf2 !important;
+}
+
+.international {
+  border-bottom-color: #f26c60 !important;
+}
+
+.culture, .current-affairs {
+  border-bottom-color: #edd30d !important;
+}
+
+.sports, .health-fitness {
+  border-bottom-color: #f260a4 !important;
+}
+
+.cities {
+  border-bottom-color: #6093f2 !important;
+}
+
 @media (min-width: 768px) {
 
   .section-title {
@@ -140,7 +160,6 @@ header {
   float: left;
   width: 100%;
   height: 243px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -158,7 +177,7 @@ header {
   line-height: 19px;
   letter-spacing: 1.5px;
   padding-bottom: 2px;
-  border-bottom: solid 3px #edd30d;
+  border-bottom: solid 3px;
   margin-bottom: 3px;
 }
 
@@ -332,7 +351,6 @@ header {
 
 #middle-section .story-card .story-image {
   height: 225px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -348,20 +366,8 @@ header {
   line-height: 19px;
   letter-spacing: 1.5px;
   padding-bottom: 1.4px;
-  border-bottom: solid 3.2px #f26c60;
+  border-bottom: solid 3.2px;
   margin-bottom: 8.6px;
-}
-
-#middle-section .story-section.underline-blue {
-  border-bottom-color: #60bcf2;
-}
-
-#middle-section .story-section.underline-pink {
-  border-bottom-color: #f260a4;
-}
-
-#middle-section .story-section.underline-yellow {
-  border-bottom-color: #edd30d;
 }
 
 #middle-section .story-card .story-title {
@@ -631,7 +637,6 @@ header {
 
 .carousel-image {
   height: 379px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -790,7 +795,6 @@ header {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
   color: #ffffff;
 }
@@ -834,7 +838,6 @@ header {
 
 #politics-section .story-card .story-image {
   height: 225px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -906,7 +909,7 @@ header {
   }
 
   #politics-section .story-div {
-    height: 577px;
+    height: 439px;
   }
 
   #politics-section .story-div .story-text {
@@ -1000,7 +1003,7 @@ header {
   }
 
   #politics-section .story-div {
-    height: 610px;
+    height: 488px;
   }
 
   #politics-section .story-div .story-text {
@@ -1104,7 +1107,6 @@ header {
   float: left;
   width: 47%;
   height: 127px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -1135,7 +1137,6 @@ header {
 
 #health-section .story-card-big .story-image {
   height: 225px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -1331,7 +1332,6 @@ header {
   float: left;
   width: 45%;
   height: 127px;
-  background-image: url('//quintype-01.imgix.net/quintype-demo/2015-11/21006f30-9d7e-4219-ba96-4b2fd945e53c/cuba14.jpg');
   background-size: cover;
 }
 
@@ -1350,11 +1350,7 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
-  border-bottom: solid 2.4px #60bcf2;
-}
-
-#recent-stories .story-section.underline-pink {
-  border-color: #f260a4;
+  border-bottom: solid 2.4px;
 }
 
 #recent-stories .story-title {
@@ -1378,12 +1374,12 @@ header {
   color: #3d3d3d;
 }
 
-.loader {
+#loader {
   font-size: 0;
   text-align: center;
 }
 
-.loader .circle {
+#loader .circle {
   display: inline-block;
   width: 16px;
   height: 16px;
@@ -1391,7 +1387,7 @@ header {
   background-color: #2f73e4;
 }
 
-.loader .circle + .circle {
+#loader .circle + .circle {
   margin-left: 15px;
 }
 
